<resources>
    <string name="app_name">Raf Trading</string>
    <string name="login_title">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logoutBtn">log out</string>
    <string name="discover_fragment_title">Discover</string>
    <string name="portfolio_fragment_title">Portfolio</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="news_title_text_holder">This is a news title</string>
    <string name="news_date_text_holder">news date</string>
    <string name="discover_fragment_first_section">News</string>
    <string name="stock_last_price_text_holder">last price $</string>
    <string name="stock_symbol_name_text_holder">stock symbol and name</string>
    <string name="discover_fragment_second_section">Popular stocks</string>
    <string name="stock_detail_title_placeholder">Title</string>
    <string name="stock_detail_value_placeholder">value</string>
    <string name="stock_detail_open_placeholder">open</string>
    <string name="stock_detail_buy_sell_placeholder">Buy/Sell</string>
    <string name="stock_name_placeholder">Stock name</string>
    <string name="buy_shares">Buy shares</string>
    <string name="sell_shares">Sell shares</string>
    <string name="account_state_or_shares_number_placeholder">Account state/Share number</string>
    <string name="sell">Sell</string>
    <string name="stock_detail_buy_placeholder">Buy</string>
    <string name="stock_detail_sell_placeholder">Sell</string>
    <string name="shares_number_placeholder">Shares number</string>
    <string name="account_state_placeholder">Account state</string>
    <string name="sell_shares_switch">Sell all shares</string>
    <string name="shares_number_to_sell_placeholder">Enter number of shares you want to sell</string>
    <string name="one">1</string>
    <string name="fragment_profile_title">My profile</string>
    <string name="username_placeholder">Username</string>
    <string name="email_placeholder">Email</string>
    <string name="portfolio_value_placeholder">Portfolio value</string>
    <string name="amount_of_money_et">Enter amount of money you want to spend</string>
    <string name="shares_number_et">Enter share number you want to buy</string>
</resources>