<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.SellActivity">


    <TextView
        android:id="@+id/stock_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:text="@string/stock_name_placeholder"
        android:textSize="30sp"
        />
    <Switch
        android:id="@+id/sell_stock_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stock_name_tv"
        android:layout_margin="20dp"
        android:text="@string/sell_shares_switch"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/shares_number_to_sell_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sell_stock_switch"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:hint="@string/shares_number_to_sell_placeholder"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/shares_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shares_number_to_sell_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:text="@string/shares_number_placeholder"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/sell_shares_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shares_number_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:text="@string/sell_shares"/>


</androidx.constraintlayout.widget.ConstraintLayout>