<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.LoginActivity">

    <TextView
        android:id="@+id/page_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/username_et"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textPersonName"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@id/page_title_tv"
        app:layout_constraintBottom_toTopOf="@id/email_et"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/username_et"
        app:layout_constraintBottom_toTopOf="@id/password_et"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>