<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.BuyActivity">


    <TextView
        android:id="@+id/stock_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:text="@string/stock_name_placeholder"
        android:textSize="30sp"
        />
    <Switch
        android:id="@+id/buy_stock_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stock_name_tv"
        android:layout_margin="20dp"
        android:text="@string/buy_shares"
        android:textSize="20sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/amount_of_money_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buy_stock_switch"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/amount_of_money_et"
        android:textSize="15sp"
        android:layout_margin="20dp"
        />


    <EditText
        android:id="@+id/share_number_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buy_stock_switch"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/shares_number_et"
        android:textSize="15sp"
        android:layout_margin="20dp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/account_state_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/share_number_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:text="@string/account_state_placeholder"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/buy_shares_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_state_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:text="@string/buy_shares"/>


</androidx.constraintlayout.widget.ConstraintLayout>